--- a/.github/workflows/build-publish.yml
+++ b/.github/workflows/build-publish.yml
@@ -1,5 +1,5 @@
 name: "JFrog-GitHub NPM Publish OIDC Integration"
-on: push
+on: workflow_dispatch
 
 # This is required as per
 # https://docs.github.com/en/actions/deployment/security-hardening-your-deployments/configuring-openid-connect-in-cloud-providers#adding-permissions-settings
@@ -21,7 +21,7 @@ jobs:
          uses: actions/setup-node@v3
          
        - name: Setup JFrog CLI
-         uses: jfrog/setup-jfrog-cli@v3
+         uses: jfrog/setup-jfrog-cli@v4
          env:  
            JF_URL: ${{ secrets.JF_URL }}
          with:
